--- a/style.css
+++ b/style.css
@@ -315,12 +315,13 @@ body {
     overflow: hidden;
 }
 
-#video {
+#video-iframe {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    border: none;
     display: block;
 }
 
