--- a/style.css
+++ b/style.css
@@ -315,13 +315,12 @@ body {
     overflow: hidden;
 }
 
-#video-iframe {
+#video {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    border: none;
     display: block;
     background: #000;
 }
